--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<audio id="player" controls=""></audio>
 		</div>
 		<div class="col-md-6">
-			<button class="btn btn-success" id="aleatorio"><i class="fa fa-random"></i></button>
+			<button class="btn btn-success" id="shuffle"><i class="fa fa-random"></i></button>
 			<ul class="list-group" id="playlist"></ul>
 		</div>
 	</div>
